fix: added wrapper for text to catalog-faq section to remove jumps in the text

--- a/app/scss/sections/faq.scss
+++ b/app/scss/sections/faq.scss
@@ -30,9 +30,6 @@
 	}
 	&.is-active {
 		border: toRem(2) solid $yellow;
-		.item-faq__text {
-			margin-block-start: toRem(15);
-		}
 	}
 	// .item-faq__title
 	&__title {
@@ -77,6 +74,10 @@
 				align-self: center;
 			}
 		}
+	}
+	// .item-faq__wrapper
+	&__wrapper {
+		padding-block-start: toRem(15);
 	}
 	// .item-faq__text
 	&__text {
